--- a/public/styles.css
+++ b/public/styles.css
@@ -66,7 +66,7 @@
     outline: none;
   }
   
-  form {
+  form.create-note {
     position: relative;
     width: 480px;
     margin: 30px auto 20px auto;
@@ -75,8 +75,8 @@
     border-radius: 7px;
     box-shadow: 0 1px 5px rgb(138, 137, 137);
   }
-  form input,
-  form textarea {
+  form.create-note input,
+  form.create-note textarea {
     width: 100%;
     border: none;
     padding: 4px;
@@ -85,7 +85,7 @@
     font-family: inherit;
     resize: none;
   }
-  form button {
+  form.create-note button {
     position: absolute;
     right: 18px;
     bottom: -18px;
@@ -99,5 +99,4 @@
     cursor: pointer;
     outline: none;
   }
-  
   
